--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 hs_err_pid*
 
 # End of https://www.gitignore.io/api/java
+z5_Animal/.idea/workspace.xml
+z5_Animal/.idea/misc.xml
+z5_Animal/.idea/encodings.xml
